# chess

./: .bashr  .bashrc  .dockerignore  .editorconfig  .env  .eslintignore  .game.py.swo  .game.swp  .gitattributes  .gitattributes.swp  .gitignore  .gitlab-ci.yml  .gitmodules  .jenkinsignore  .k8ignore  .pieces.py.swp  .pre-commit-config.yaml  .profile  Chess App  ChessBoard.kt  ChessPiece.kt  Dockerfile  Jenkinsfile  Main.kt  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  ai_engine.py  app.py  board.py  build.gradle.kts  chess_turns.py  cleanup.sh  deployment.yaml  docker-bake.hcl  docker-compose.yml  eslint.config.mjs  file_chunk_aa  game.py  (+27 more)
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  run_chess.sh  run_game.sh  setup.py  tsconfig.json  vite.config.js
frontend/.netlify/plugins/: package.json
frontend/frontend-ui/: index.html  package-lock.json  package.json  vite.config.js  webpack.config
frontend/frontend-ui/public/: index.html  styles.css
frontend/frontend-ui/src/: App.css  App.js  App.jsx  chess.js  index.css  index.js  styles.css  tailwind.config  tailwind.config.js
frontend/src/: App.jsx  api.js  chessEngine.js  config.js
frontend/src/api/: chessApi.js
frontend/src/chessgame/: App.jsx  api.py  (+8 more)
frontend/static/: styles.css
frontend/templates/: index.html
frontend/ui/: .eslintignore  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs  run-all.sh  vite.config.js  vitest.config.js
frontend/ui-service/: package.json
(+392 files in other folders)
