[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
target-version = ["py311"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]  # Example: enable common rule categories
fix = true                    # Auto-fix issues when possible
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess"
version = "0.1.0"
description = "A simple chess game with UI"
authors = [
  { name = "Dean MacDonald", email = "dean@example.com" }
]
dependencies = []
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

