[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessgame"
version = "0.1.0"
description = "Modular chess game built with Python and Pygame"
authors = [
    { name = "Dean MacDonald", email = "your.email@example.com" }
]
readme = "README.md"
license = "MIT"
dependencies = [
    "pygame"
]

[project.urls]
Homepage = "https://github.com/deanmacdonald/chess"

[tool.setuptools.packages.find]
where = ["src"]
